# news-reader

./: .gitignore  AGENTS.md  PLAN.md  README.md  config.yaml  pyproject.toml
docs/: scoring-improvement.md
scripts/: score-stats.sh
src/news_reader/: cli.py  config.py  embeddings.py  fetcher.py  main.py  parser.py  ranker.py  sources.py  storage.py  summarizer.py  web.py
