[project]
name = "news-reader"
version = "0.1.0"
description = "Local news aggregator with personalized ranking and LLM summarization"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "feedparser>=6.0",
    "trafilatura>=1.6",
    "beautifulsoup4>=4.12",
    "transformers>=4.30",
    "torch>=2.0",
    "protobuf>=3.20",
    "sentencepiece>=0.1",
    "sentence-transformers>=2.2",
    "typer>=0.9",
    "rich>=13.0",
    "pyyaml>=6.0",
]

[project.scripts]
news-reader = "news_reader.main:app"

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv]
package = true

[tool.pyright]
venvPath = "."
venv = ".venv"
typeCheckingMode = "standard"
